--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <meta>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="shortcut icon" href="favicon.png" type="image/png"/>
     <title>dtmoney</title>
   </head>
   <body>
